# YACCP

./: .clang-format  CMakeLists.txt  calibrate.py  check_valid_images.py  config.toml  config.toml.bak  create_charuco_board.cpp  example.toml  main.cpp  qodana.yaml  vcpkg.json
.github/workflows/: qodana_code_quality.yml
recoding/: .clang-format  CMakeLists.txt  Calibration.hpp  Utility.cpp  Utility.hpp  VideoViewer.cpp  VideoViewer.h  VideoViewer.hpp  basler_rgb_recorder.cpp  calibrate.py  calibrate2.py  calibration.cpp  camera_manager.cpp  check_valid_images.py  detection_validator.cpp  detection_validator.hpp  image_validator.cpp  image_validator.hpp  metavision_viewer.cpp  prophesee_dvs_recorder.cpp  utility.cpp  utility.h  vcpkg.json  videoViewer.cpp  video_viewer.cpp  video_viewer.hpp
recoding/recorders/: basler_cam_worker.cpp  basler_rgb_recorder.cpp  basler_rgb_recorder.h  basler_rgb_recorder.hpp  camera_worker.cpp  camera_worker.hpp  prophesee_cam_worker.cpp  prophesee_dvs_recorder.cpp  prophesee_dvs_recorder.h  prophesee_dvs_recorder.hpp
src/: calibration.cpp  camera_calibration.cpp  camera_calibration.hpp  defaults.hpp  manager.cpp  utility.cpp  utility.hpp  yaccp.cpp
src/cli/: board_creation.cpp  board_creation.hpp  calibration.cpp  calibration.hpp  orchestrator.cpp  orchestrator.hpp  recording.cpp  recording.hpp  validation.cpp  validation.hpp
src/config/: board.cpp  board.hpp  detection.cpp  detection.hpp  orchestrator.cpp  orchestrator.hpp  recording.cpp  recording.hpp  viewing.cpp
src/executors/: board_runner.cpp  board_runner.hpp  calibration_runner.cpp  calibration_runner.hpp  recording_runner.cpp  recording_runner.hpp  validation_runner.cpp  validation_runner.hpp
src/global_variables/: cli_defaults.hpp  config_defaults.hpp  program_defaults.hpp
src/recoding/: detection_validator.cpp  detection_validator.hpp  job_data.hpp  video_viewer.cpp  video_viewer.hpp
src/recoding/recorders/: basler_cam_worker.cpp  basler_cam_worker.hpp  camera_worker.cpp  camera_worker.hpp  prophesee_cam_worker.cpp  prophesee_cam_worker.hpp
src/tools/: create_board.cpp  create_board.hpp  create_charuco_board.cpp  create_charuco_board.hpp  image_validator.cpp  image_validator.hpp
tools/: CMakeLists.txt
